--- a/styles.css
+++ b/styles.css
@@ -18,9 +18,38 @@
   }
   .time{
     font-size: 0.7em;
-    color: #999;
+    color: #6c6b6b;
   }
   .update-mssg{
     text-align: center;
     margin: 20px auto;
   }
+  .tabs > ul{
+    padding: 0;
+  }
+  .tabs > ul{
+    padding: 0;
+  }
+  .tabs .trigger{
+    list-style-type: none;
+    padding: 10px;
+    background: #020202;
+    margin: 4px;
+    border-radius: 6px;
+    display: inline-block;
+    padding: 10px 20px;
+    cursor: pointer;
+  }
+  .tabs .trigger.active{
+    background: #ff6565;
+    color: white;
+  }
+  .tabs .content{
+    padding: 10px 20px;
+    border-radius: 6px;
+    display: none;
+  }
+  .tabs .content.active{
+    display: block;
+  }
+  
